Atcoder/compiling_error.txt
/Users/kakeshitamasamichi/Desktop/kyopro/Atcoder/C.cpp: In function 'int main()':
/Users/kakeshitamasamichi/Desktop/kyopro/Atcoder/C.cpp:308:38: error: 'j' was not declared in this scope
  308 |             if(((i<<y)&1)&&table1[x][j]==1){b=0;break;}
      |                                      ^
